// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
<div
  className="src-shared-components-expander-index__container"
  id="some-id"
>
  <button
    aria-expanded={false}
    className="src-shared-components-expander-index__header-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <h6
      className="src-shared-components-expander-index__header-text"
    >
      The Header Text
    </h6>
    <FaAngleDown
      className="src-shared-components-expander-index__arrow-down src-shared-components-expander-index__arrow"
    />
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  />
</div>
`;

exports[`should render correctly when closed and has interesting content 1`] = `
<div
  className="src-shared-components-expander-index__container"
  id="some-id"
>
  <button
    aria-expanded={false}
    className="src-shared-components-expander-index__header-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <h6
      className="src-shared-components-expander-index__header-text"
    >
      The Header Text
    </h6>
    <FaCircle
      className="src-shared-components-expander-index__indicator-closed src-shared-components-expander-index__indicator"
    />
    <FaAngleDown
      className="src-shared-components-expander-index__arrow-down src-shared-components-expander-index__arrow"
    />
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  />
</div>
`;

exports[`should render correctly when open 1`] = `
<div
  className="src-shared-components-expander-index__container"
  id="some-id"
>
  <button
    aria-expanded={true}
    className="src-shared-components-expander-index__header-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <h6
      className="src-shared-components-expander-index__header-text"
    >
      The Header Text
    </h6>
    <FaAngleDown
      className="src-shared-components-expander-index__arrow-up src-shared-components-expander-index__arrow"
    />
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames="expander"
      key="children"
      timeout={250}
    >
      <div
        id="child"
      />
    </CSSTransition>
  </TransitionGroup>
</div>
`;

exports[`should render correctly when open and has interesting content 1`] = `
<div
  className="src-shared-components-expander-index__container"
  id="some-id"
>
  <button
    aria-expanded={true}
    className="src-shared-components-expander-index__header-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex="0"
  >
    <h6
      className="src-shared-components-expander-index__header-text"
    >
      The Header Text
    </h6>
    <FaCircle
      className="src-shared-components-expander-index__indicator-open src-shared-components-expander-index__indicator"
    />
    <FaAngleDown
      className="src-shared-components-expander-index__arrow-up src-shared-components-expander-index__arrow"
    />
  </button>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      classNames="expander"
      key="children"
      timeout={250}
    >
      <div
        id="child"
      />
    </CSSTransition>
  </TransitionGroup>
</div>
`;
